--- a/sinlessgames-web-interface/.eslintrc.json
+++ b/sinlessgames-web-interface/.eslintrc.json
@@ -3,7 +3,7 @@
     "plugin:@nx/react-typescript",
     "next",
     "next/core-web-vitals",
-    "../../.eslintrc.json"
+    "../.eslintrc.json"
   ],
   "ignorePatterns": ["!**/*", ".next/**/*"],
   "overrides": [
@@ -12,7 +12,7 @@
       "rules": {
         "@next/next/no-html-link-for-pages": [
           "error",
-          "apps/sinlessgamesllc/pages"
+          "sinlessgames-web-interface/pages"
         ]
       }
     },
