--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,11 @@
 strict-peer-dependencies=false
 auto-install-peers=true
+
+[*]
+strict-peer-dependencies=false
+auto-install-peers=true
+
+[*.(tsx|ts|js|jsx)]
+strict-peer-dependencies=false
+auto-install-peers=true
+line-width=80
