--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -13,8 +13,13 @@ tasks:
     desc: Initialize The Project
     cmds:
       - cmd: echo Initializing the project
+      - cmd: npm install
+        silent: true
       - cmd: npm install -g npm@10.5.0
+        silent: true
+      - cmd: pnpm add -g pnpm
         silent: true
       - cmd: npm add --global nx@latest
         silent: true
+      
       
