--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -69,12 +69,12 @@
         "GitHub.copilot",
         "BenjaminBenais.copilot-theme",
         "donjayamanne.git-extension-pack",
-        "Actionforge.actionforge",
         "ms-azuretools.vscode-docker",
         "firsttris.vscode-jest-runner",
         "nrwl.angular-console",
         "esbenp.prettier-vscode",
-        "github.vscode-github-actions"
+        "github.vscode-github-actions",
+        "mrmlnc.vscode-json5"
       ]
     }
   }
