--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -17,3 +17,6 @@ area/taskfile:
   - changed-files:
       - any-glob-to-any-file: .taskfiles/**/*
       - any-glob-to-any-file: Taskfile*
+area/packageJSON:
+  - changed-files:
+      - any-glob-to-any-file: /**/package.json
