--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^6.1.8",
     "tslib": "^2.3.0"
   }
 }
