--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -77,8 +77,7 @@
         "nrwl.angular-console",
         "esbenp.prettier-vscode",
         "github.vscode-github-actions",
-        "mrmlnc.vscode-json5",
-        "Mend.mend-advise"
+        "mrmlnc.vscode-json5"
       ]
     }
   }
