--- a/.github/workflows/assignee-assignment.yml
+++ b/.github/workflows/assignee-assignment.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   assign:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     permissions:
       issues: write
       pull-requests: write
