--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -8,9 +8,7 @@
     # URL: https://github.com/actions/labeler
     
     on:
-      workflow_dispatch:
-      pull_request_target:
-        branches: ['main']
+      - pull_request
     
     jobs:
       labeler:
@@ -19,6 +17,7 @@
         permissions:
           contents: read
           pull-requests: write
+          issues: write
         steps:
           - name: Labeler
             uses: actions/labeler@v5
