working with the permissions of the labeler

--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -15,9 +15,10 @@
         name: Labeler
         runs-on: ubuntu-latest
         permissions:
+          actions: write
           contents: read
-          pull-requests: write
           issues: write
+          pull-requests: write
         steps:
           - name: Labeler
             uses: actions/labeler@v4
