--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -14,7 +14,10 @@
       labeler:
         name: Labeler
         runs-on: ubuntu-latest
-        permissions: write-all
+        permissions:
+          contents: read
+          pull-requests: write
+          issues: write
         steps:
           - name: Labeler
             uses: actions/labeler@v4
