--- a/.github/workflows/todos.yml
+++ b/.github/workflows/todos.yml
@@ -9,6 +9,12 @@ jobs:
   todos:
     runs-on: ubuntu-latest
 
+    permissions:
+      actions: read
+      contents: read
+      issues: write
+      pull-requests: write
+
     steps:
       - uses: actions/checkout@v4
       - uses: dtinth/todo-actions@master
