--- a/.github/workflows/todos.yml
+++ b/.github/workflows/todos.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   todos:
     runs-on: ubuntu-latest
-
+    permissions: write-all
     steps:
       - uses: actions/checkout@v4
       - uses: dtinth/todo-actions@master
