working on permissions for todos

--- a/.github/workflows/todos.yml
+++ b/.github/workflows/todos.yml
@@ -10,11 +10,19 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      actions: read
-      checks: read
-      contents: read
+      actions: write
+      checks: write
+      contents: write
+      deployments: write
+      id-token: write
       issues: write
+      discussions: write
+      packages: write
+      pages: write
       pull-requests: write
+      repository-projects: write
+      security-events: write
+      statuses: write
 
     steps:
       - uses: actions/checkout@v4
