more work with todo permissions

--- a/.github/workflows/todos.yml
+++ b/.github/workflows/todos.yml
@@ -5,28 +5,29 @@ on:
     branches:
      - main
 
+permissions:
+  actions: write
+  checks: write
+  contents: write
+  deployments: write
+  id-token: write
+  issues: write
+  discussions: write
+  packages: write
+  pages: write
+  pull-requests: write
+  repository-projects: write
+  security-events: write
+  statuses: write
+
 jobs:
   todos:
     runs-on: ubuntu-latest
 
-    permissions:
-      actions: write
-      checks: write
-      contents: write
-      deployments: write
-      id-token: write
-      issues: write
-      discussions: write
-      packages: write
-      pages: write
-      pull-requests: write
-      repository-projects: write
-      security-events: write
-      statuses: write
-
     steps:
       - uses: actions/checkout@v4
-      - uses: dtinth/todo-actions@master
+
+      - uses: dtinth/todo-actions@v0.2.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TODO_ACTIONS_MONGO_URL: ${{ secrets.TODO_ACTIONS_MONGO_URL }}
