--- a/.github/workflows/todos.yml
+++ b/.github/workflows/todos.yml
@@ -1,33 +1,12 @@
-name: Create issues from todos
-
-on:
-  push:
-    branches:
-     - main
-
-permissions:
-  actions: write
-  checks: write
-  contents: write
-  deployments: write
-  id-token: write
-  issues: write
-  discussions: write
-  packages: write
-  pages: write
-  pull-requests: write
-  repository-projects: write
-  security-events: write
-  statuses: write
-
+name: "Run TODO to Issue"
+on: [ "push" ]
 jobs:
-  todos:
-    runs-on: ubuntu-latest
-
+  build:
+    runs-on: "ubuntu-latest"
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: dtinth/todo-actions@v0.2.0
+      - uses: "actions/checkout@v3"
+      - name: "TODO to Issue"
+        uses: "alstr/todo-to-issue-action@v4"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TODO_ACTIONS_MONGO_URL: ${{ secrets.TODO_ACTIONS_MONGO_URL }}
+          AUTO_P: "true"
+          CLOSE_ISSUES: "true"
