--- a/.github/workflows/todos.yml
+++ b/.github/workflows/todos.yml
@@ -7,6 +7,7 @@ jobs:
       - uses: "actions/checkout@v3"
       - name: "TODO to Issue"
         uses: "alstr/todo-to-issue-action@v4"
-        env:
+        with:
+          LANGUAGES: .github/languages.json
           AUTO_P: "true"
           CLOSE_ISSUES: "true"
