--- a/.github/labels.yaml
+++ b/.github/labels.yaml
@@ -1,27 +1,27 @@
 ---
 # Branches
 - name: "branch: develop"
-  color: 'f54242'
+  color: '800000'
 - name: "branch: feature"
-  color: 'f54242'
+  color: '800000'
 - name: "branch: bugfix"
-  color: 'f54242'
+  color: '800000'
 - name: "branch: hotfix"
-  color: 'f54242'
+  color: '800000'
 - name: "branch: release"
-  color: 'f54242'
+  color: '800000'
 - name: "branch: fix"
-  color: 'f54242'
+  color: '800000'
 - name: "branch: main"
-  color: 'f54242'
+  color: '800000'
 
 # Semantic Type
 - name: "type: patch"
-  color: '0E8A16'
+  color: '0052CC'
 - name: "type: minor"
-  color: 'FBCA04'
+  color: '0052CC'
 - name: "type: major"
-  color: 'B60205'
+  color: '0052CC'
 - name: "type: break"
   color: '0052CC'
 - name: "type: todo"
@@ -29,17 +29,17 @@
 
 # Area
 - name: area/docs
-  color: '2d66f6'
+  color: '0e8a16'
 - name: area/apps
-  color: '42f566'
+  color: '0e8a16'
 - name: area/web-ui
-  color: 'daa520'
+  color: '0e8a16'
 - name: area/libs
-  color: 'f542f5'
+  color: '0e8a16'
 - name: area/taskfile
   color: '0e8a16'
 - name: area/packageJSON
-  color: 'f5a542'
+  color: '0e8a16'
 
 # Misc
 - name: 'todo comment'
