--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -4,35 +4,35 @@
 #
 area/docs:
   - changed-files:
-      - any-glob-to-any-file: Docs/**/*.md
+      - any-glob-to-any-file: Docs/**
       - any-glob-to-any-file: /**/README.md
   - base-branch: main
 
 area/apps:
   - changed-files:
-      - any-glob-to-any-file: apps/**/*
+      - any-glob-to-any-file: apps/**
   - base-branch: main
 
 area/web-ui:
   - changed-files:
-      - any-glob-to-any-file: aps/sinlessgames-ui/**/*
-      - any-glob-to-any-file: apps/sinlessgames-ui-e2e/**/*
+      - any-glob-to-any-file: apps/sinlessgames-ui/**
+      - any-glob-to-any-file: apps/sinlessgames-ui-e2e/**
   - base-branch: main
 
 area/libs:
   - changed-files:
-      - any-glob-to-any-file: libs/**/*
+      - any-glob-to-any-file: libs/**
   - base-branch: main
 
 area/taskfile:
   - changed-files:
-      - any-glob-to-any-file: .taskfiles/**/*.yaml
+      - any-glob-to-any-file: .taskfiles/**
       - any-glob-to-any-file: Taskfile.yaml
   - base-branch: main
 
 area/packageJSON:
   - changed-files:
-      - any-glob-to-any-file: /**/package.json
+      - any-glob-to-any-file: "**/package.json"
       - any-glob-to-any-file: package.json
   - base-branch: main
 
@@ -43,3 +43,9 @@ feature:
 # Add 'release' label to any PR that is opened against the `main` branch
 release:
  - base-branch: 'main'
+
+Documentation:
+- changed-files:
+  - any-glob-to-any-file:
+    - Docs/*
+    - Docs/Guides/*
