--- a/.github/workflows/nx.yml
+++ b/.github/workflows/nx.yml
@@ -26,10 +26,13 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
+      
+      - run: npm ci
 
       - uses: nrwl/nx-set-shas@v4
       # This line is needed for nx affected to work when CI is running on a PR
       # - run: git branch --track main
+      - run: git branch --track main origin/main
 
-      - run: npx nx-cloud record -- nx format:check --package-manager=pnpm
-      - run: npx nx affected -t lint test build e2e-ci --package-manager=pnpm
+      - run: npx nx-cloud record -- nx format:check
+      - run: npx nx affected -t lint test build e2e-ci
