--- a/.github/workflows/nx.yml
+++ b/.github/workflows/nx.yml
@@ -27,7 +27,7 @@ jobs:
           node-version: 20
           cache: 'pnpm'
       
-      - run: npm ci
+      - run: pnpm install --frozen-lockfile
 
       - uses: nrwl/nx-set-shas@v4
       # This line is needed for nx affected to work when CI is running on a PR
