--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.4.1",
     "nx": "18.2.1",
+    "pnpm": "^8.15.5",
     "prettier": "^3.0.0",
     "sass": "1.62.1",
     "ts-jest": "^29.1.0",
