--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "@sinlessgamesllc.com/source",
   "version": "0.0.0",
   "license": "MIT",
+  "pnpm": {
+    "packageManager": "pnpm",
+    "useWorkspaces": true,
+    "version": "^8.15.5"
+  },
   "scripts": {},
   "private": true,
   "devDependencies": {
