--- a/.github/workflows/nx.yml
+++ b/.github/workflows/nx.yml
@@ -34,4 +34,5 @@ jobs:
     name: Nx Cloud - Agents
     uses: nrwl/ci/.github/workflows/nx-cloud-agents.yml@v0.14.0
     with:
+      pnpm-version: 8
       number-of-agents: 3
