--- a/.github/workflows/nx.yml
+++ b/.github/workflows/nx.yml
@@ -29,7 +29,7 @@ jobs:
       # (i.e. anything that starts with `nx run`/`nx run-many`/`nx affected --target`), are still captured in the Nx Cloud UI and Github App comment for
       # easier troubleshooting. See more here: https://nx.dev/nx-cloud/set-up/record-commands#recording-non-nx-commands
       parallel-commands: |
-        npx nx-cloud record -- npx nx format:check
+        npx nx-cloud record -- pnpx nx format:check
       parallel-commands-on-agents: |
         npx nx affected --target=lint --parallel=3
         npx nx affected --target=build --parallel=3
