--- a/.github/workflows/nx.yml
+++ b/.github/workflows/nx.yml
@@ -25,11 +25,12 @@ jobs:
       pnpm-version: 8
       main-branch-name: main
       number-of-agents: 3
+      init-commands: |
+        npx nx-cloud record -- pnpx nx format:check
       # NOTE: Here we are using the special `nx-cloud record` command to ensure that any commands we run that do not go through the cloud task runner natively
       # (i.e. anything that starts with `nx run`/`nx run-many`/`nx affected --target`), are still captured in the Nx Cloud UI and Github App comment for
       # easier troubleshooting. See more here: https://nx.dev/nx-cloud/set-up/record-commands#recording-non-nx-commands
-      parallel-commands: |
-        npx nx-cloud record -- pnpx nx format:check
+      parallel-commands: null
       parallel-commands-on-agents: |
         npx nx affected --target=lint --parallel=3
         npx nx affected --target=build --parallel=3
