--- a/.github/workflows/nx.yml
+++ b/.github/workflows/nx.yml
@@ -26,6 +26,7 @@ jobs:
       main-branch-name: main
       number-of-agents: 3
       init-commands: |
+        npx nx-cloud record -- pnpm install --frozen-lockfile
         npx nx-cloud record -- pnpx nx format:check
       # NOTE: Here we are using the special `nx-cloud record` command to ensure that any commands we run that do not go through the cloud task runner natively
       # (i.e. anything that starts with `nx run`/`nx run-many`/`nx affected --target`), are still captured in the Nx Cloud UI and Github App comment for
