--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -2,5 +2,5 @@
   $schema: 'https://docs.renovatebot.com/renovate-schema.json',
   extends: ['config:recommended'],
   baseBranches: ['main'],
-  additionalBranchPrefix: '{{parentDir}}-',
+  additionalBranchPrefix: '{{parentDir}}-'
 }
