--- a/package.json
+++ b/package.json
@@ -56,10 +56,13 @@
   "dependencies": {
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.14",
     "@mui/material-nextjs": "^5.15.11",
+    "@mui/styled-engine-sc": "6.0.0-alpha.18",
     "husky": "^9.0.11",
+    "material": "link:@mui/icons/material",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
