--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -23,13 +23,11 @@ tasks:
         silent: true
       - cmd: npm add --global nx@latest
         silent: true
-    
+
   check-port:
-    desc: "Check if port 3000 is in use and kill the process if it is"
+    desc: 'Check if port 3000 is in use and kill the process if it is'
     silent: true
     cmds:
       - echo Checking port 3000 and killing process if it is in use
       - lsof -i :3000 | grep LISTEN | awk '{print $2}' | xargs kill -9
-      - Task Complete
-      
-      
+      - echo Task Complete
