--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@sinlessgamesllc.com/source",
-  "version": "0.0.0",
+  "name": "@sinlessgamesllc/source",
+  "version": "0.1.0",
   "license": "MIT",
   "pnpm": {
     "packageManager": "pnpm",
@@ -12,16 +12,31 @@
     "lint": "nx affected --target=lint --fix",
     "prepare": "husky install",
     "format": "nx format:write --all",
-    "pre-commit": "npm run format && npm run lint && npm run test"
+    "pre-commit": "npm run format && npm run lint"
+  },
+  "husky": {
+    "hooks": {
+      "applypatch-msg": "echo '[Husky] applypatch-msg'",
+      "pre-applypatch": "echo '[Husky] pre-applypatch'",
+      "post-applypatch": "echo '[Husky] post-applypatch'",
+      "pre-commit": "npm run pre-commit"
+    }
   },
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.24.1",
+    "@nx-tools/container-metadata": "^5.2.0",
+    "@nx-tools/nx-container": "^5.2.0",
     "@nx/cypress": "18.2.1",
     "@nx/eslint": "18.2.1",
     "@nx/eslint-plugin": "18.2.1",
+    "@nx/express": "18.2.1",
     "@nx/jest": "18.2.1",
     "@nx/js": "18.2.1",
     "@nx/next": "18.2.1",
+    "@nx/react": "18.2.1",
     "@nx/workspace": "18.2.1",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
@@ -33,7 +48,7 @@
     "@types/react-dom": "18.2.23",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
-    "babel-jest": "^29.4.1",
+    "babel-jest": "^29.7.0",
     "cypress": "^13.6.6",
     "eslint": "~8.57.0",
     "eslint-config-next": "14.0.4",
@@ -43,6 +58,7 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.4.1",
     "nx": "18.2.1",
@@ -54,15 +70,13 @@
     "typescript": "~5.4.2"
   },
   "dependencies": {
-    "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
-    "@mui/material": "^5.15.14",
+    "@mui/material": "^5.15.15",
     "@mui/material-nextjs": "^5.15.11",
     "@mui/styled-engine-sc": "6.0.0-alpha.18",
-    "husky": "^9.0.11",
-    "material": "link:@mui/icons/material",
+    "express": "^4.18.1",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
