--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,6 +1,6 @@
 {
-  $schema: 'https://docs.renovatebot.com/renovate-schema.json',
-  extends: ['config:recommended'],
-  baseBranches: ['main'],
-  additionalBranchPrefix: '{{parentDir}}-'
+  $schema: "https://docs.renovatebot.com/renovate-schema.json",
+  extends: ["config:recommended"],
+  baseBranches: ["main"],
+  additionalBranchPrefix: "{{parentDir}}-"
 }
