--- a/.github/workflows/assignee-assignment.yml
+++ b/.github/workflows/assignee-assignment.yml
@@ -12,7 +12,7 @@ jobs:
       issues: write
       pull-requests: write
     steps:
-      - name: 'Auto-assign issue'
+      - name: "Auto-assign issue"
         uses: pozil/auto-assign-issue@v1
         with:
           numOfAssignee: 1
