--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "lint": "nx affected --target=lint --fix",
     "prepare": "husky install",
     "format": "nx format:write --all",
-    "pre-commit": "npm run format && npm run lint"
+    "pre-commit": "pnpm run format && pnpm run lint"
   },
   "husky": {
     "hooks": {
       "applypatch-msg": "echo '[Husky] applypatch-msg'",
       "pre-applypatch": "echo '[Husky] pre-applypatch'",
       "post-applypatch": "echo '[Husky] post-applypatch'",
-      "pre-commit": "npm run pre-commit"
+      "pre-commit": "pnpm run pre-commit"
     }
   },
   "private": true,
