--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "next": "14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.33.3",
     "styled-components": "^6.1.8",
     "tslib": "^2.6.2"
   }
