--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,6 +36,7 @@ jobs:
           NEW_VERSION="1.0.0"
         fi
         echo "NEW_VERSION=${NEW_VERSION}" >> $GITHUB_ENV
+        cd apps/sinlessgames-ui
 
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag sinless777/sinlessgames-ui:${{ env.NEW_VERSION }}
