--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,7 @@ jobs:
         npm install
 
     - name: Build the app
-      run: npx nx build sinlessgames-ui --output-path=./dist/apps/sinlessgames-ui
+      run: npx nx build sinlessgames-ui
 
     - name: Verify build output
       run: |
