--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,14 +13,34 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '22.3.0'
+        cache: 'npm'
+
+    - name: Install dependencies
+      run: |
+        cd apps/sinlessgames-ui
+        npm install
+
+    - name: Build the app
+      run: npx nx build sinlessgames-ui
+
+    - name: Verify build output
+      run: |
+        ls -la dist/apps/sinlessgames-ui
+
     - uses: actions/cache@v4
       with:
         # See here for caching with `yarn` https://github.com/actions/cache/blob/main/examples.md#node---yarn or you can leverage caching with actions/setup-node https://github.com/actions/setup-node
         path: |
           ~/.npm
-          apps/sinlessgames-ui/.next/cache
+          ${{ github.workspace }}/apps/sinlessgames-ui/.next/cache
         # Generate a new cache whenever packages or source files change.
         key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
         # If source files changed but packages didn't, rebuild from a prior cache.
         restore-keys: |
           ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+
+   
