--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,10 +49,7 @@ jobs:
     - name: Get previous image version
       id: get-previous-version
       run: |
-        PREVIOUS_VERSION=$(curl -s -H "Accept: application/vnd.docker.distribution.manifest.v2+json" \
-        "https://registry.hub.docker.com/v2/repositories/sinless777/sinlessgames-ui/tags" | \
-        jq -r '.results[].name | select(test("^[0-9]+\\.[0-9]+\\.[0-9]+$"))' | \
-        sort -Vr | head -n1)
+        PREVIOUS_VERSION=$(curl -s "https://registry.hub.docker.com/v2/repositories/sinless777/sinlessgames-ui/tags" | jq -r '.results[].name')
 
 
     - name: Determine new version
