--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,37 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '22'
-        cache: 'npm'
-
-    - name: Install dependencies
-      run: |
-        cd apps/sinlessgames-ui
-        npm install
-
-    - name: Build the app
-      run: npx nx build sinlessgames-ui
-
-    - name: Verify build output
-      run: |
-        ls -la dist/apps/sinlessgames-ui
-
-    - uses: actions/cache@v4
-      with:
-        # See here for caching with `yarn` https://github.com/actions/cache/blob/main/examples.md#node---yarn or you can leverage caching with actions/setup-node https://github.com/actions/setup-node
-        path: |
-          ~/.npm
-          ${{ github.workspace }}/apps/sinlessgames-ui/.next/cache
-        # Generate a new cache whenever packages or source files change.
-        key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
-        # If source files changed but packages didn't, rebuild from a prior cache.
-        restore-keys: |
-          ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+    
 
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
@@ -49,9 +19,9 @@ jobs:
     - name: Determine previous version
       id: determine-previous-version
       run: |
-        PREVIOUS_VERSION=$(curl -s "https://registry.hub.docker.com/v2/repositories/***/sinlessgames-ui/tags" | jq -r '.results[].name' | grep -v 'latest')
-        echo "Previous version: $PREVIOUS_VERSION"
-        echo "PREVIOUS_VERSION=$PREVIOUS_VERSION" >> $GITHUB_ENV
+        VERSION=$(curl -s "https://registry.hub.docker.com/v2/repositories/***/sinlessgames-ui/tags" | jq -r '.results[].name' | grep -v 'latest')
+        echo "Previous version: $VERSION"
+        echo "PREVIOUS_VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Determine new version
       id: determine-new-version
