--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,6 +27,6 @@ jobs:
         id: determine-new-version
         run: |
               # Extract version from package.json
-              ls
+              pwd ls
               pwd
     
